# OnSpeed-XPlane

./: .gitignore  AOA-Tone-FlyOnSpeed.xml  CMakeLists.txt  Doc_XP_Plugins.md  README.md  aoa_audio.cpp  dev_copy_plugin.sh
examples/: EngineStarter.cpp  OpenAL-Example.cpp  test_widgets.cpp
